# gaussian_process_surface_predicting

./: CMakeLists.txt  package.xml
config/: hyperparam.txt
include/gaussian_process_regression/: gaussian_process_regression.h  gaussian_process_regression.hxx  test_gpr.cpp
launch/: prac.launch
src/: my_test.cpp  prac.cpp  test_gpr.cpp
